fix(slider): change visible slider items & grid gaps, fix overflow, r… (#30)
* fix(slider): change visible slider items & grid gaps, fix overflow, remove rotating circle text

* fix stylelint

--- a/styles/includes/_overlap.scss
+++ b/styles/includes/_overlap.scss
@@ -1,6 +1,7 @@
 @import "../core/mixins";
 
 .overlap {
+	overflow-x: hidden;
 	position: relative;
 
 	&::after {
